--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="my.css">
 </head>
-<body>	
+<body>
 	<div class="container">
 		<h1>Bhoomika's Store</h1>
 		<div class="row">
@@ -93,5 +93,7 @@
     <!-- Latest compiled and minified JavaScript -->
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<script src="app/app.js"></script>
+	<script src="app/library/d3.js"></script>
 </body>
 </html>
