--- a/d3-sample.html
+++ b/d3-sample.html
@@ -4,27 +4,17 @@
 <head>
   <link rel="stylesheet" href="my.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.8.0/d3.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 </head>
 
 <body>
-  <h1>Hello!</h1>
-  <svg class="chart1">
+  <h4>Donus Chart</h4>
+  <div class="donutChart" style="height: 300px;">
+  </div>
+  <svg class="chart">
   </svg>
-  <svg class="chart2">
-  </svg>
-  <svg class="chart3">
-  </svg>
-  <!--<svg width="400" height="100" style="border: 1px solid black;">
-    <g transform="translate(50, 5)">
-      <rect x="50" y="10" width="100" height="100" fill="red" stroke="black" stroke-width="10"></rect>
-      <rect x="5" y="5" width="100" height="100" fill="blue" stroke="green" stroke-width="10"></rect>
-    </g>
-    <g transform="translate(5, 100)">
-      <circle cx="190" cy="70" r="20" fill="orange" stroke="black" stroke-width="5"></circle>
-      <line x1="200" y1="200" x2="50" y2="50" stroke="green" stroke-width="2"></line>
-      <path d="M 50 50 Q 50 180 200 200 z" fill="red" stroke="orange" stroke-width="2"></path>
-    </g>
-</svg> -->
+    <script src="bar-charts.js"></script>
+    <script src="donut-chart.js"></script>
     <script src="d3-script.js"></script>
 </body>
 
